API now doen't return source tokens. Instead we return statistics
